syntax = "proto3";

package placeholder;

service Placeholder {
  rpc SendMessage(PlaceholderRequest) returns (PlaceholderResponse);
}

message PlaceholderRequest { string nonce = 1; }

message PlaceholderResponse { string nonce = 1; }